# XKernel

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cognitive_Substrate_v3_0_REAL_OS.docx  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  XKernal-Progress-Report.md
daemon/cs-daemon/: Cargo.toml
kernel/ct_lifecycle/: Cargo.toml  README.md  WEEK06_PHASE0_FINALE.md  WEEK07_COGNITIVE_PRIORITY_SCHEDULER.md  WEEK08_FULL_4D_SCHEDULER.md  WEEK09_CREW_AWARE_SCHEDULING.md  WEEK10_DEADLOCK_DETECTION.md  WEEK11_DUAL_RESOURCE_SCHEDULER.md  WEEK12_GPU_INTEGRATION_COMPLETION.md  WEEK13_PHASE1_DEMO_PREPARATION.md  WEEK14_PHASE1_EXIT_CRITERIA.md  WEEK15_SCHEDULER_API_ADAPTERS.md  WEEK16_FRAMEWORK_ADAPTER_INTEGRATION.md  WEEK17_SCHEDULER_PERFORMANCE_PROFILING.md  WEEK18_SCHEDULER_OPTIMIZATION.md  WEEK19_CONTEXT_SWITCH_OPTIMIZATION.md  WEEK20_COLD_START_OPTIMIZATION.md  WEEK21_REAL_WORLD_AGENT_SCENARIOS.md  WEEK22_CONCURRENCY_SCALING.md  WEEK23_PERFORMANCE_VALIDATION.md  WEEK24_PHASE2_EXIT_VERIFICATION.md  WEEK25_COMPREHENSIVE_BENCHMARKING.md  WEEK26_BENCHMARKING_ANALYSIS.md  WEEK27_ENTERPRISE_CODE_REVIEW_BENCHMARKING.md  WEEK28_CUSTOMER_SUPPORT_SCIENTIFIC_BENCHMARKING.md  WEEK29_FUZZ_TESTING_SCHEDULER.md  WEEK30_ADVERSARIAL_TESTING_SECURITY_HARDENING.md  WEEK31_FIX_CRITICAL_HIGH_FINDINGS.md  WEEK32_PAPER_CONTRIBUTION_WRITING.md  WEEK33_PAPER_REVISION_OS_AUDIT.md  WEEK34_FINAL_PAPER_LAUNCH_READINESS.md  WEEK35_FINAL_SECURITY_AUDIT_LAUNCH_PREP.md  WEEK36_OPEN_SOURCE_LAUNCH_PROJECT_COMPLETION.md
kernel/ipc_signals_exceptions/: Cargo.toml  README.md  WEEK06_CHECKPOINTING_ENGINE.md  WEEK07_PUBSUB_IPC.md  WEEK08_PUBSUB_MULTITOPIC.md  WEEK09_SHARED_CONTEXT_CRDT.md  WEEK10_SHARED_CONTEXT_OPTIMIZATION.md  WEEK11_PROTOCOL_NEGOTIATION.md  WEEK12_DISTRIBUTED_IPC.md  WEEK13_GPU_CHECKPOINTING.md  WEEK14_FAULT_TOLERANCE_DEMO.md  WEEK15_CHECKPOINT_MIGRATION.md  WEEK16_IPC_PERFORMANCE_OPTIMIZATION.md  WEEK17_FAULT_RECOVERY_OPTIMIZATION.md  WEEK18_FAULT_RECOVERY_5X.md  WEEK19_DISTRIBUTED_IPC_HARDENING.md  WEEK20_DISTRIBUTED_CHANNEL_HARDENING.md  WEEK21_SDK_INTEGRATION.md  WEEK22_SDK_FINAL_HARDENING.md  WEEK23_COMPREHENSIVE_BENCHMARKING.md  WEEK24_FINAL_VALIDATION_AUDIT.md  WEEK25_FAULT_RECOVERY_BENCHMARKING.md  WEEK26_IPC_BENCHMARKING.md  WEEK27_CHECKPOINT_BENCHMARKING.md  WEEK28_DISTRIBUTED_FINAL_BENCHMARKING.md  WEEK29_FUZZ_TESTING_INFRASTRUCTURE.md  WEEK30_EXTENDED_FUZZ_CAMPAIGNS.md  WEEK31_ADVERSARIAL_TESTING_ATTACK_SCENARIOS.md  WEEK32_ADVERSARIAL_TESTING_PAPER_WRITING.md  WEEK33_PAPER_SECTIONS_IMPLEMENTATION_RESULTS.md  WEEK34_PAPER_FINALIZATION_CODE_AUDIT.md  WEEK35_FINAL_AUDIT_RELEASE_CANDIDATE.md  WEEK36_LAUNCH_EXECUTION_PROJECT_COMPLETION.md
runtime/framework_adapters/: Cargo.toml  INDEX.md  README.md  WEEK06_ADAPTER_DEVELOPMENT_GUIDE.md  WEEK07_ADAPTER_KERNEL_INTEGRATION.md  WEEK08_COMPATIBILITY_LAYER.md  WEEK09_TRANSLATION_LAYER.md  WEEK10_ERROR_HANDLING_TELEMETRY.md  WEEK11_LANGCHAIN_ADAPTER.md  WEEK12_LANGCHAIN_CALLBACK_LIFECYCLE.md  WEEK13_LANGCHAIN_MVP.md  WEEK14_LANGCHAIN_MVP_VALIDATION.md  WEEK15_LANGCHAIN_COMPLETE.md  WEEK16_SEMANTIC_KERNEL_ADAPTER.md  WEEK17_SEMANTIC_KERNEL_90.md  WEEK18_SK_FINALIZE_CREWAI_BEGIN.md  WEEK19_CREWAI_ADAPTER.md  WEEK20_CREWAI_COMPLETE.md  WEEK21_AUTOGEN_ADAPTER.md  WEEK22_AUTOGEN_COMPLETE.md  WEEK23_CUSTOM_RAW_ADAPTER.md  WEEK24_ADAPTER_FINALIZATION.md  WEEK25_ADAPTER_BENCHMARKING.md  WEEK26_ADAPTER_OPTIMIZATION.md  WEEK27_CT_SPAWN_OPTIMIZATION.md  WEEK28_ADAPTER_HARDENING.md  WEEK29_CEF_EVENT_TRANSLATION.md  WEEK30_MIGRATION_TOOLING_PHASE1.md  WEEK31_MIGRATION_TOOLING_PHASE2.md  WEEK32_MIGRATION_TOOLING_FINALIZATION.md  WEEK33_COMPREHENSIVE_DOCUMENTATION.md  WEEK34_DOCUMENTATION_LAUNCH_READINESS.md  WEEK35_FINAL_ADAPTER_TESTING_QA.md  WEEK36_ADAPTER_LAUNCH_P6_COMPLETION.md
sdk/csci/: Cargo.toml  README.md
sdk/python-sdk/: README.md  pyproject.toml
services/gpu_accelerator/: Cargo.toml  README.md  WEEK06_PHASE0_COMPLETION.md  WEEK07_TPC_SPATIAL_SCHEDULING.md  WEEK08_TPC_VALIDATION_PROFILING.md  WEEK09_KERNEL_ATOMIZATION.md  WEEK10_DYNAMIC_RIGHT_SIZING.md  WEEK11_MULTI_MODEL_VRAM.md  WEEK12_KV_CACHE_ISOLATION.md  WEEK13_MULTI_GPU_SUPPORT.md  WEEK14_PHASE1_INTEGRATION_TESTING.md  WEEK15_GPU_CHECKPOINT_RESTORE.md  WEEK16_GPU_CR_VALIDATION.md  WEEK17_GPU_CR_SCHEDULER_INTEGRATION.md  WEEK18_INFERENCE_BATCHING.md  WEEK19_BATCHING_VALIDATION.md  WEEK20_GPU_MS_PROFILING.md  WEEK21_GPU_DEEP_ANALYSIS.md  WEEK22_GPU_PERFORMANCE_VALIDATION.md  WEEK23_GPU_SCHEDULER_INTEGRATION.md  WEEK24_PERFORMANCE_TUNING_PHASE2.md  WEEK25_COMPREHENSIVE_GPU_BENCHMARKING.md  WEEK26_BENCHMARK_ANALYSIS_OPTIMIZATION.md  WEEK27_EXTENDED_WORKLOAD_BENCHMARKING.md  WEEK28_BENCHMARK_COMPLETION_VALIDATION.md  WEEK29_KVCACHE_SIDE_CHANNEL_TESTING.md  WEEK30_GPU_COMMAND_FUZZ_TESTING.md  WEEK31_MULTI_GPU_STRESS_TESTING.md  WEEK32_VRAM_LEAK_DETECTION_AUDIT.md  WEEK33_GPU_SCHEDULING_PAPER_SECTION.md  WEEK34_GPU_PAPER_FINALIZATION_AUDIT.md  WEEK35_RISK_REVIEW_ADR001_ASSESSMENT.md  WEEK36_FINAL_AUDIT_PRODUCTION_LAUNCH_SIGNOFF.md
services/semantic_memory/: Cargo.toml  README.md  WEEK06_PHASE0_COMPLETION.md  WEEK07_L1_PRODUCTION_MEMORY.md  WEEK08_L1_COMPRESSION_SNAPSHOTS.md  WEEK09_L2_EPISODIC_MEMORY.md  WEEK10_SPILL_FIRST_EVICTION.md  WEEK11_L2_BACKGROUND_COMPACTOR.md  WEEK12_L3_LONGTERM_MEMORY.md  WEEK13_OOC_HANDLER.md  WEEK14_CRDT_SHARED_MEMORY.md  WEEK15_KNOWLEDGE_SOURCE_MOUNTING.md  WEEK16_KNOWLEDGE_SOURCE_TESTING.md  WEEK17_SEMANTIC_PREFETCH.md  WEEK18_QUERY_OPTIMIZATION.md  WEEK19_MEMORY_EFFICIENCY_BENCHMARK.md  WEEK20_FRAMEWORK_ADAPTER_INTEGRATION.md  WEEK21_ALLOCATION_HOT_PATH.md  WEEK22_RAG_FRAMEWORK_INTEGRATION.md  WEEK23_FINAL_PERFORMANCE_TUNING.md  WEEK24_PHASE2_COMPLETION_VALIDATION.md  WEEK25_COMPREHENSIVE_MEMORY_BENCHMARKING.md  WEEK26_EXTENDED_WORKLOAD_BENCHMARKING.md  WEEK27_BENCHMARKING_ANALYSIS_ROADMAP.md  WEEK28_FINAL_VALIDATION_SIGNOFF.md  WEEK29_MEMORY_PRESSURE_STRESS_TESTING.md  WEEK30_EDGE_CASES_PRODUCTION_READINESS.md  WEEK31_MEMORY_LEAK_DETECTION_VALIDATION.md  WEEK32_NUMA_AWARE_MEMORY_VALIDATION.md  WEEK33_TECHNICAL_PAPER_SEMANTIC_MEMORY.md  (+3 more)
(+958 files in other folders)
