[workspace]
members = [
    "kernel/ct_lifecycle",
    "kernel/capability_engine",
    "kernel/ipc_signals_exceptions",
    "services/semantic_memory",
    "services/gpu_accelerator",
    "services/tool_registry_telemetry",
    "runtime/framework_adapters",
    "runtime/semantic_fs_agent_lifecycle",
    "sdk/csci",
    "sdk/tools/cs-pkg",
    "sdk/tools/cs-trace",
    "sdk/tools/cs-replay",
    "sdk/tools/cs-profile",
    "sdk/tools/cs-capgraph",
    "sdk/tools/cs-top",
    "sdk/tools/cs-ctl",
    "daemon/cs-daemon",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["XKernal Contributors"]
license = "Apache-2.0"
repository = "https://github.com/xkernal/cognitive-substrate"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
ulid = "1.1"
bitflags = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (control plane API)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Observability
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client (for CLI tools)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
