[package]
name = "ct-lifecycle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
