[package]
name = "cs-framework_adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
std = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[lib]
name = "cs_framework_adapters"
path = "src/lib.rs"
