[package]
name = "cs-framework_adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
ulid = "1"

[features]
default = []
std = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[lib]
name = "cs_framework_adapters"
path = "src/lib.rs"
