[package]
name = "cs-csci"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cognitive Substrate Syscall Interface (CSCI) v0.1 specification and types"

[dependencies]
ulid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[features]
default = []
# no_std is the default; std feature enables std library support if needed
std = []
