[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xkernal"
dynamic = ["version"]
description = "Python SDK for XKernal — the AI-native cognitive substrate OS"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Cognitive Substrate Project" }]
keywords = ["ai", "agents", "kernel", "os", "cognitive-substrate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
xkernal = "xkernal.cli:main"

[tool.hatch.version]
path = "src/xkernal/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xkernal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
