[package]
name = "cs-tool_registry_telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cs_tool_registry_telemetry"
path = "src/lib.rs"

[dependencies]
ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
# no_std is default behavior of this crate
